<resources>
    <string name="app_name">Dicoding Story</string>
    <string name="dicoding">Dicoding</string>
    <string name="token">Bearer %s</string>

    <!-- Authentication -->
    <string name="login">Login</string>
    <string name="title_login">Welcome!</string>
    <string name="subtitle_login">Just one minute away to see Dicoding Stories</string>
    <string name="info_login">Don\'t have an account?</string>
    <string name="login_invalid">Email or Password is not valid</string>
    <string name="login_valid">Login Success</string>

    <string name="register">Register</string>
    <string name="title_register">Create an account!</string>
    <string name="subtitle_register">Fill this form to create a new account</string>
    <string name="info_register">Already have an account?</string>
    <string name="register_invalid">Name or Email or Password is not valid</string>
    <string name="register_valid">Register Success</string>

    <string name="copyright">© 2022 Bintang</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="email_invalid">Email is not valid</string>
    <string name="password_invalid">Password should be at least 6 characters</string>

    <!-- Home -->
    <string name="logout">Logout</string>
    <string name="language">Language</string>
    <string name="logout_valid">Logout Success</string>

    <!-- Story -->
    <string name="username">Username</string>
    <string name="desc">Description</string>
    <string name="date">1 minute ago</string>
    <string name="image_desc">Image Description</string>
    <string name="no_story">There is no data</string>
    <string name="hit_like">For next features</string>
    <string name="detail_title">%s\'s Post</string>
    <string name="retry">Retry</string>

    <!-- Publish -->
    <string name="publish">Publish Story</string>
    <string name="select_image">Choose an image from</string>
    <string name="publish_description">Describe your thought</string>
    <string name="upload">Upload</string>
    <string name="upload_valid">New post uploaded</string>
    <string name="upload_invalid">Image or Desc is Empty</string>

</resources>