<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/Parent"
    android:background="@color/white"
    tools:context=".ui.authentication.register.RegisterFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_left"
        android:orientation="vertical"
        style="@style/Content"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_right"
        android:orientation="vertical"
        style="@style/Content"
        app:layout_constraintGuide_percent="0.75" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:background="@color/light"
        android:layout_marginBottom="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/img_register" />

    <ImageView
        android:id="@+id/img_register"
        android:layout_width="0dp"
        android:layout_height="250dp"
        android:contentDescription="@string/image_desc"
        android:scaleType="centerCrop"
        android:src="@drawable/img_register"
        app:layout_constraintStart_toEndOf="@id/guideline_left"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@id/guideline_right" />

    <TextView
        android:id="@+id/title_register"
        style="@style/Content.Title"
        android:text="@string/title_register"
        android:layout_marginTop="12dp"
        android:layout_marginStart="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_register" />

    <TextView
        android:id="@+id/subtitle_register"
        style="@style/Content.Small.Bold"
        android:text="@string/subtitle_register"
        android:layout_marginTop="6dp"
        app:layout_constraintStart_toStartOf="@id/title_register"
        app:layout_constraintTop_toBottomOf="@id/title_register"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/name_field"
        style="@style/RowContent"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="16dp"
        android:padding="14dp"
        android:drawableStart="@drawable/ic_outline_person"
        android:textAlignment="textStart"
        android:drawablePadding="8dp"
        android:inputType="text"
        android:hint="@string/name"
        android:autofillHints="name"
        android:background="@drawable/selector_bg_edit_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/subtitle_register"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.bintangfajarianto.submission2.views.CustomEmail
        android:id="@+id/email_field"
        style="@style/RowContent"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="16dp"
        android:padding="14dp"
        android:background="@drawable/selector_bg_edit_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name_field"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.bintangfajarianto.submission2.views.CustomPassword
        android:id="@+id/password_field"
        style="@style/RowContent"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="16dp"
        android:padding="14dp"
        android:background="@drawable/selector_bg_edit_text"
        app:layout_constraintStart_toStartOf="@id/email_field"
        app:layout_constraintTop_toBottomOf="@id/email_field"
        app:layout_constraintEnd_toEndOf="@id/email_field" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:paddingVertical="12dp"
        app:layout_constraintStart_toStartOf="@id/password_field"
        app:layout_constraintTop_toBottomOf="@+id/password_field"
        app:layout_constraintEnd_toEndOf="@id/password_field"/>

    <LinearLayout
        style="@style/Content"
        android:orientation="horizontal"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_register"
        app:layout_constraintEnd_toEndOf="parent" >

        <TextView
            style="@style/Content.Small"
            android:text="@string/info_register" />

        <TextView
            android:id="@+id/go_to_login"
            style="@style/Content.Small"
            android:layout_marginStart="8dp"
            android:text="@string/login"
            android:textColor="@color/red_200" />
    </LinearLayout>

    <TextView
        style="@style/Content.Small"
        android:text="@string/copyright"
        android:layout_marginBottom="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <ProgressBar
        android:id="@+id/progress_bar"
        style="@style/Content"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>
