<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/RowContent"
    android:layout_marginBottom="4dp"
    android:layout_marginHorizontal="8dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="0dp"
    app:cardUseCompatPadding="true" >

    <androidx.constraintlayout.widget.ConstraintLayout
        style="@style/Parent" >

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/story_avatar"
            style="@style/CircleButton.Avatar"
            android:layout_marginTop="8dp"
            android:layout_marginHorizontal="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/img_default_profile" />

        <TextView
            android:id="@+id/story_username"
            style="@style/Content.Small.Bold"
            android:layout_marginStart="16dp"
            android:text="@string/username"
            app:layout_constraintStart_toEndOf="@+id/story_avatar"
            app:layout_constraintTop_toTopOf="@+id/story_avatar"
            app:layout_constraintBottom_toBottomOf="@id/story_avatar" />

        <ImageView
            android:id="@+id/story_image"
            style="@style/StoryImage"
            android:scaleType="centerCrop"
            android:contentDescription="@string/image_desc"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/story_avatar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/like_button"
            tools:src="@drawable/img_template" />

        <androidx.appcompat.widget.AppCompatToggleButton
            android:id="@+id/like_button"
            style="@style/CircleButton.Action"
            android:background="@drawable/selector_btn_like"
            android:textOff=""
            android:textOn=""
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/story_image" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/comment_button"
            style="@style/CircleButton.Action"
            android:background="@drawable/ic_btn_comment"
            app:layout_constraintStart_toEndOf="@id/like_button"
            app:layout_constraintTop_toBottomOf="@id/story_image" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/share_button"
            style="@style/CircleButton.Action"
            android:background="@drawable/ic_btn_share"
            app:layout_constraintStart_toEndOf="@id/comment_button"
            app:layout_constraintTop_toBottomOf="@id/story_image" />

        <TextView
            android:id="@+id/story_desc"
            style="@style/Content.Small"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="6dp"
            android:text="@string/desc"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/like_button"
            app:layout_constraintBottom_toTopOf="@id/story_date" />

        <TextView
            android:id="@+id/story_date"
            style="@style/Content.Mini"
            android:layout_marginBottom="8dp"
            android:text="@string/date"
            app:layout_constraintStart_toStartOf="@id/story_desc"
            app:layout_constraintTop_toBottomOf="@id/story_desc"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>